# ipcfg

./: .gitignore  COPYING  Makefile.am  configure.ac
debian/: changelog  control  copyright  ipcfg.dirs  ipcfg.init.d  ipcfg.postinst
doc/: Makefile  Makefile.am  README.md  actions.txt  dc12.tex  tech.txt  tests.txt
examples/: Makefile.am  ipcfg.cfg
include/: Makefile.am
include/ipcfg/: Makefile.am  action.h  btree.h  cll.h  cnode.h  commands.h  config-actions.h  config.h  context.h  core.h  daemon.h  defaults.h  event.h  hashtable.h  hashtable_itr.h  iface.h  ll.h  macros.h  plugins.h  state.h  test.h  util.h
include/ipcfg/backend/: Makefile.am  dhcp.h  iface.h  init.h  pid.h
include/ipcfg/private/: Makefile.am  configparse.h  event.h  init.h  state.h
src/: Makefile  Makefile.am  action.c  adddebug.pl  btree.c  cll.c  cnode.c  commands.c  config-actions.c  config.c  context.c  core-states.c  core.c  daemon.c  defaults.c  edge.d  event.c  hashtable.c  hashtable_itr.c  hashtable_private.h  ipcfg-lexer.l  ipcfg-parser.y  ll.c  main.c  main.d  node.d  parser.d  path.d  plugins.c  state.c  test.c  util.c
src/backend/: Makefile.am  dhcp-isc.c  iface-linux.c  iface-test.c  pid-linux.c  pid-test.c
src/backend-test/: Makefile.am  iface.c  pid.c
src/ipcfg/: Makefile  comparator.d  debugout.d  defaults.d  edge.d  event.d  graph.d  iface.d  node.d  parser.d  path.d  rtnetlink_common.d  templates.d
src/ipcfg/linux/: .staticip.d.swp  Makefile  mii.d  rtnetlink_common.d  staticip.d
src/linux/: Makefile  libnl.di  mii.d  rtnetlink.di
src/modules/: Makefile.am  ifupdown.c  wireless.c
