ipcfgincludedir=$(includedir)/ipcfg
ipcfginclude_HEADERS = cnode.h \
	commands.h \
	config-actions.h \
	daemon.h \
	event.h \
	hashtable.h \
	hashtable_itr.h \
	ll.h \
	macros.h \
	plugins.h \
	test.h \
	util.h \
	action.h \
	context.h \
	config.h \
	core.h \
	btree.h \
	defaults.h
SUBDIRS = private backend
